<resources>
    <string name="app_name">MovieProduction_FinalProject</string>
    <string name="Welcome">Name your Movie</string>
    <string name="movieNameHint">Movie Name</string>
    <string name="ActionGenre">Action</string>
    <string name="DramaGenre">Drama</string>
    <string name="HorrorGenre">Horror</string>
    <string name="startProduction">Start Production</string>
    <string name="CreateStudio">Create a Studio</string>
    <string name="studioHint">Studio Name</string>
    <string name="titlesDisplay">%s | %s</string>
    <string name="genreDisplay">Selected Genre: %s</string>
    <string name="budgetDisplay">Starting Budget: %s</string>
    <string name="title_activity_production_info">Production Phase</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="BudgetIndicator">Budget: %s</string>
    <string name="ActorLabel">Actors</string>
    <string name="ProductionLAbel">Production Plans</string>
    <string name="PracticalEffect">Practical Effects</string>
    <string name="EquipmentLabel">Equipment</string>
    <string name="DirectingLabel">Directing</string>
    <string name="setLabel">Set Design</string>
    <string name="ProductionTransitionLabel">Continue to Post Production</string>
    <string name="ProductionTitle">Production</string>
    <string name="actor1Label">Lead Actor</string>
    <string name="Actor2Label">Supporting Actor</string>
    <string name="costumeLabel">Costumes</string>
    <string name="error">Negative Budget</string>


    <string name="title_activity_post__production">Post Production Phase</string>
    <string name="PostProductionLabel">Post Production</string>
    <string name="EditingLabel">Editing</string>
    <string name="VFXLabel">Visual Effects</string>
    <string name="MusicLabel">Music</string>
    <string name="makeMovieButton">Make Movie</string>
    <string name="MarketingLabel">Marketing</string>
    <string name="MarketingMessageLabel">Write a blurb advertising your movie</string>

    <string name="BoxOfficeDisplay">Box Office: $%s</string>
    <string name="boxOfficeSuccess">Your movie made bank! Great job! You should make another film with the leftover. </string>
    <string name="boxOfficeFail">The movie didnt make its money back. You may need to take out some loans to continue making movies. </string>
    <string name="ActionFail">Your action movie failed to give a thrill to audiences. It will not be a memorable action film. </string>
    <string name="ActionSuccess">There is something special about this action film. It had heart but also that non-stop energy moviegoers love. It will be remembered fondly. </string>
    <string name="DramaSuccess">Critics love your film. The emotions and thought for this movie was great. It is also getting some award buzz. </string>
    <string name="DramaFail">Crafting a drama is hard. You know this first hand now. After some anticipation, this move just was not a good movie. </string>
    <string name="Horror">Horror is hard to really make a splash. You made a very average horror film. Could have been worse. </string>
    <string name="StartOver">Make Another Movie</string>
</resources>